# poetry-release

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  tests.yml
poetry_release/: changelog.py  command.py  config.py  exception.py  executor.py  git.py  plugin.py  replace.py  settings.py  version.py
tests/: test_version.py
