[tool.poetry]
name = "poetry-release"
version = "0.3.0"
description = "Plugin for release management in projects based on Poetry"
license = "MIT"
authors = ["Denis Kayshev <topenkoff@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/topenkoff/poetry-release"
repository = "https://github.com/topenkoff/poetry-release"

packages = [
    { include = "poetry_release"}
]

[tool.poetry.dependencies]
python = "^3.6"
poetry = "^1.2.0a2"

[tool.poetry.plugins."poetry.application.plugin"]
poetry-release = "poetry_release.plugin:ReleasePlugin"

[tool.poetry-release]
release-replacements = [
    { file="CHANGELOG.md", pattern="\\[Unreleased\\]", replace="[{version}] - {date}" },
    { file="CHANGELOG.md", pattern="\\(https://semver.org/spec/v2.0.0.html\\).", replace="(https://semver.org/spec/v2.0.0.html).\n\n## [Unreleased]"},
]
release-commit-message = "Release {package_name} {version} 🎉🎉🎉"
sign-commit = true
sign-tag = true

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
